docs: gRPC服务器端反射和最低日志等级

--- a/src/content/docs/start/jamd.yaml
+++ b/src/content/docs/start/jamd.yaml
@@ -2,9 +2,12 @@ instances:
   save_path: config
 features:
   enable_register: true
+  enable_grpc_server_reflection: true
 security:
   argon2:
     memcost: 65536
     timecost: 2
     parallelism: 1
     length: 32
+log:
+  level: debug
